Add contact model and url #75

--- a/templates/base.html
+++ b/templates/base.html
@@ -179,7 +179,7 @@
                     <ul class="list-unstyled ms-2 text-center">
                         <li>
                             <a href="" class="nav-link fs-6 mb-1">About Us</a>
-                            <a href="" class="nav-link fs-6 mb-1">Contact Us</a>
+                            <a href="{% url 'contact_us'%}" class="nav-link fs-6 mb-1">Contact Us</a>
                             <a href="" class="nav-link fs-6">Privacy Policy</a>
                         </li>
                     </ul>
