--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="container-fluid">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col text-center mt-3">
             <h2><strong>Product Details</strong></h2>
             <hr class="w-75 mb-1 mx-auto">
@@ -59,6 +59,7 @@
                         {% endif %}
                     </div>
                 </div>
+
                 <p class="mt-4">{{ product.description | safe }}</p>
 
                 <!-- add links for category, card set and expansion -->
@@ -96,14 +97,6 @@
                 </p>
                 {% endif %}
 
-                <div class="text-end mb-3">
-                    {% if product.rating %}
-                    <small class="mb-3"><i class="fas fa-star me-1 fs-6 text-yellow"></i><span class="text-gray">
-                            {{ product.rating }} / 5 </span></small>
-                    {% else %}
-                    <small>No Rating</small>
-                    {% endif %}
-                </div>
                 <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -136,6 +129,51 @@
             </div>
         </div>
     </div>
+    <!-- User reviews -->
+    <div class="row">
+        <div class="col-12 text-center mt-3">
+            <h2><strong>Review this product</strong></h2>
+        </div>
+    </div>
+    <!-- Add review -->
+    <div class="row justify-content-center">
+        <div class="col-11 col-md-8 bg-white mb-4 shadow rounded-3 border text-center">
+            {% if user.is_authenticated %}
+                {% if not reviewed_by_user %}
+                    <p class="text-center mt-1 mb-0">Select a rating</p>
+                    <div class="rating mb-3">
+                        <form method="POST" action="{% url 'add_review' product.id %}">
+                            {% csrf_token %}
+                            <!-- rating -->
+                            <div class="btn-group" role="group" aria-label="Rating stars radio buttons">
+                                <input type="radio" class="btn-check" id="star5" name="review_rating" value="5" autocomplete="off" required>
+                                <label class="btn border-0" for="star5"><i class="fa-solid fa-star"></i></label>
+                            
+                                <input type="radio" class="btn-check" id="star4" name="review_rating" value="4" autocomplete="off">
+                                <label class="btn border-0" for="star4"><i class="fa-solid fa-star"></i></label>
+                            
+                                <input type="radio" class="btn-check" id="star3" name="review_rating" value="3" autocomplete="off">
+                                <label class="btn border-0" for="star3"><i class="fa-solid fa-star"></i></label>
+
+                                <input type="radio" class="btn-check" id="star2" name="review_rating" value="2" autocomplete="off">
+                                <label class="btn border-0" for="star2"><i class="fa-solid fa-star"></i></label>
+
+                                <input type="radio" class="btn-check" id="star1" name="review_rating" value="1" autocomplete="off">
+                                <label class="btn border-0" for="star1"><i class="fa-solid fa-star"></i></label>
+                            </div>
+                            {{ form.review_text|as_crispy_field }}
+                            <button type="submit" class="btn btn-custom-yellow my-3">Submit Review</button>
+                        </form>
+                    </div>
+                {% else %}
+                    <p class="mt-3">You have already reviewed this product, Thank you!</p>
+                {% endif %}
+            {% else %}
+                <p class="mt-3">Please <a href="{% url 'account_login' %}"><strong>login</strong></a> or <a href="{% url 'account_signup' %}"><strong>signup</strong></a> to leave a review.</p>
+            {% endif %}
+        </div>
+    </div>
+
 </div>
  {% include 'includes/confirm_delete_modal.html' %}
 
@@ -143,6 +181,7 @@
 
 {% block postloadjs %}
 {{ block.super }}
+<!-- bootstrap tooltip script -->
 <script>
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
@@ -150,4 +189,5 @@
     })
 
 </script>
+
 {% endblock %}
