--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -173,7 +173,35 @@
             {% endif %}
         </div>
     </div>
-
+    <!-- Display reviews -->
+    <div class="row">
+        <div class="col-12 text-center mt-3">
+            <h2><strong>Reviews</strong></h2>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-10 col-md-6 bg-white mb-4 shadow rounded-3 border" id="reviews">
+            {% if reviews %}
+                {% for review in reviews %}
+                    <div class="row review">
+                        <div class="col px-5">
+                            <p class="mt-3">
+                                <small><strong>{{ review.user.username }}</strong> - {{ review.created_on }}</small>
+                                <strong class="ms-2">{{ review.review_rating }}/5</strong> <i class="fa-solid fa-star text-yellow"></i>
+                                {% if user.is_authenticated and review.user == user %}
+                                    <a href="{% url 'delete_review' review.id %}" class="btn btn-sm btn-custom-red ms-1">Delete</a>
+                                {% endif %}
+                            </p>
+                            <p class="ms-2">{{ review.review_text }}</p>
+                            <hr class="w-75">
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                    <p class="text-center mt-3">There are no reviews for this product yet</p>
+            {% endif %}
+        </div>
+    </div>
 </div>
  {% include 'includes/confirm_delete_modal.html' %}
 
