--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,11 +5,14 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <h2 class="text-center  mt-2"><strong>{% trans "Change Password" %}</strong></h2>
+    <h2 class="text-center mt-2"><strong>{% trans "Change Password" %}</strong></h2>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        <div class="text-center">
+            <button class="btn btn-custom-yellow my-3" type="submit" name="action">{% trans "Change Password" %}</button>
+        </div>
+        
     </form>
 {% endblock %}
