--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -7,13 +7,15 @@
     <h2 class="text-center  mt-2"><strong>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</strong></h2>
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+        <p class="text-center">{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                <div class="text-center">
+                    <input class="btn btn-custom-yellow my-3" type="submit" name="action" value="{% trans 'Change password' %}"/>
+                </div>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
