--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,5 +5,5 @@
 
 {% block inner_content %}
     <h2 class="text-center  mt-2"><strong>{% trans "Change Password" %}</strong></h2>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <p class="text-center">{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
