--- a/templates/includes/nav_bar.html
+++ b/templates/includes/nav_bar.html
@@ -1,5 +1,10 @@
 <div class="collapse navbar-collapse mx-4" id="navbarNav">
     <ul class="navbar-nav mx-auto">
+        <li class="nav-item d-block d-sm-none">
+            <a class="nav-link me-5 bold" href="{% url 'home' %}">
+                Home
+            </a>
+        </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown me-5 bold" href="#" id="all-products-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
