--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -35,7 +35,7 @@
             {% for item in basket_items %}
             <div class="row mb-3 bg-white rounded-4 border shadow d-flex align-items-center">
                 <div class="text-end fs-5">
-                    <a href="{% url 'remove_from_basket' item.product.id %}">
+                    <a href="{% url 'remove_from_basket' item.product.id %}" data-bs-toggle="tooltip" data-bs-placement="Bottom" title="Remove from basket">
                         <i class="fas fa-times"></i>
                     </a>
                 </div>
@@ -52,14 +52,14 @@
                 </div>
                 <!-- Product details -->
                 <div class="col-12 col-sm-8">
-                    <p class="mb-0"><strong>{{ item.product.name }}</strong></p>
-                    <p class="sku text-gray">SKU: {{ item.product.sku|upper }}</p>
-                    <hr class="text-blue mb-5 w-75">
+                    <p class="mb-0 p-nm-basket"><strong>{{ item.product.name }}</strong></p>
+                    <p class="sku text-gray sku-basket">SKU: {{ item.product.sku|upper }}</p>
+                    <hr class="text-blue mb-5 w-75 hr-basket">
                     <!-- Adjust Quantity -->
                     <!-- Edited from boutique_ado walkthrough -->
-                    <form class="form update-form mb-5" method="POST" action="{% url 'adjust_basket' item.item_id %}">
+                    <form class="form update-form" method="POST" action="{% url 'adjust_basket' item.item_id %}">
                         {% csrf_token %}
-                        <div class="form-group d-flex">
+                        <div class="form-group d-flex qty-form-basket">
                             <div class="input-group w-75">
                                 <div class="input-group-prepend">
                                     <button class="decrement-qty btn btn-custom-blue rounded-0 border-0"
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </form>
-                    <p class="mb-0 me-2 mb-1">€{{ item.product.price}}
+                    <p class="mb-0 me-2 mb-1 price-basket">€{{ item.product.price}}
                         <span class="ms-3">
                             <strong>
                                 €{{ item.product.price | calc_subtotal:item.quantity}}
@@ -128,7 +128,7 @@
                 <!-- Buttons -->
                 <div class="row mt-3 mb-4">
                     <div class="col-6 d-flex justify-content-center">
-                        <a href="{% url 'products' %}" class="btn btn-custom-blue w-100">
+                        <a href="{% url 'products' %}" class="btn btn-custom-blue w-100 product-btn">
                             <span>
                                 <i class="fas fa-arrow-left"></i>
                             </span>
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                     <div class="col-6 d-flex justify-content-center ps-0">
-                        <a href="{% url 'checkout' %}" class="btn btn-custom-yellow w-100">
+                        <a href="{% url 'checkout' %}" class="btn btn-custom-yellow w-100 checkout-btn">
                             <span>Checkout</span>
                             <span>
                                 <i class="fas fa-lock"></i>
@@ -214,5 +214,13 @@
         // Submit the form
         $(this).closest('form').submit();
     });
+</script>
+<!-- bootstrap tooltip script -->
+<script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+
 </script>
 {% endblock %}
