Update error emplates #18

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,10 +3,12 @@
 
 {% block extra_title %}404 error{% endblock %}
 
+{% block content %}
+
 <div class="container">
     <div class="row justify-content-center text-center mt-5">
-        <div class="col-10 col-lg-8 mt-2 bg-off-white rounded-2">
-            <h1 class="text-decoration-underline text-green my-4">404 error - Not Found</h1>
+        <div class="col-10 col-lg-8 mt-2 bg-white rounded-4 shadow mb-3">
+            <h1 class="my-4">404 error - Not Found</h1>
             <p>The page you're looking for doesn't exist. Please check your URL and try again. You can return to the
                 homepage using the button below. </p>
             <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
