--- a/templates/401.html
+++ b/templates/401.html
@@ -3,10 +3,12 @@
 
 {% block extra_title %}401 error{% endblock %}
 
+{% block content %}
+
 <div class="container">
     <div class="row justify-content-center text-center mt-5">
-        <div class="col-10 col-lg-8 mt-2 bg-off-white rounded-2">
-            <h1 class="text-decoration-underline text-green my-4">401 error - Unauthorized</h1>
+        <div class="col-10 col-lg-8 mt-2 bg-white rounded-4 shadow mb-3">
+            <h1 class="my-4">401 error - Unauthorized</h1>
             <p>Access Denied! You must authenticate yourself to access this resource. Please provide valid credentials
                 or log in to continue. You can return to the homepage using the button below. </p>
             <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
