--- a/templates/503.html
+++ b/templates/503.html
@@ -3,10 +3,11 @@
 
 {% block extra_title %}503 error{% endblock %}
 
+{% block content %}
 <div class="container">
     <div class="row justify-content-center text-center mt-5">
-        <div class="col-10 col-lg-8 mt-2 bg-off-white rounded-2">
-            <h1 class="text-decoration-underline text-green my-4">503 Service Unavailable</h1>
+        <div class="col-10 col-lg-8 mt-2 bg-white rounded-4 shadow mb-3">
+            <h1 class="my-4">503 Service Unavailable</h1>
             <p>The service is temporarily unavailable. You can return
                 to the homepage using the button below </p>
             <a href="{% url 'home' %}" class="btn btn-custom-yellow my-4"> Home</a>
