--- a/templates/base.html
+++ b/templates/base.html
@@ -190,30 +190,30 @@
                     <ul class="list-unstyled list-inline mt-3">
                         <li class="list-inline-item">
                             <a class="btn btn-outline-light fb-icon"
-                                href="https://www.facebook.com/" target="_blank" rel="noopener"
+                                href="https://www.facebook.com/" target="_blank" rel="noopener nofollow"
                                 aria-label="Check out our Facebook page (opens in a new tab)"><i
                                     class="fab fa-facebook-f text-white"></i></a>
                         </li>
                         <li class="list-inline-item">
                             <a class="btn btn-outline-light insta-icon"
                                 href="https://www.instagram.com/" target="_blank"
-                                rel="noopener" aria-label="Check out our Instagram page (opens in a new tab)"><i
+                                rel="noopener nofollow" aria-label="Check out our Instagram page (opens in a new tab)"><i
                                     class="fab fa-instagram text-off-white"></i></a>
                         </li>
                         <li class="list-inline-item">
                             <a class="btn btn-outline-light tiktok-icon" href="https://www.tiktok.com/" target="_blank"
-                                rel="noopener" aria-label="Check out our Tiktok page (opens in a new tab)"><i
+                                rel="noopener nofollow" aria-label="Check out our Tiktok page (opens in a new tab)"><i
                                     class="fab fa-tiktok text-white"></i></a>
                         </li>
                         <li class="list-inline-item">
                             <a class="btn btn-outline-light youtube-icon" href="https://www.youtube.com/"
-                                target="_blank" rel="noopener"
+                                target="_blank" rel="noopener nofollow"
                                 aria-label="Check out ours Youtube page (opens in a new tab)"><i
                                     class="fab fa-youtube text-red"></i></a>
                         </li>
                         <li class="list-inline-item">
                             <a class="btn btn-outline-light x-icon" href="https://twitter.com/" target="_blank"
-                                rel="noopener" aria-label="Check out our Twitter page (opens in a new tab)"><i
+                                rel="noopener nofollow" aria-label="Check out our Twitter page (opens in a new tab)"><i
                                     class="fab fa-x-twitter text-white"></i></a>
                         </li>
                     </ul>
