Add privacy policy & update meta tags #73 #60

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="Welcome to Pokemon TCG Ireland, your one stop shop for all Pokemon TCG products">
     <meta name="keywords"
-        content="Pokemon, Pokemon TCG, Pokemon TCG Ireland, Pokemon cards, Pokemon trading card game, Pokemon cards Ireland">
+        content="Pokemon, Pokemon TCG, Pokemon TCG Ireland, Pokemon cards, Pokemon trading card game, Pokemon cards Ireland, Pokemon cards Dublin, Pokemon card shop, Pokemon accessories, Pokemon figures, Pokemon plushes, Pokemon binders, Pokemon ETB, Pokemon booster box Ireland, Pokemon gifts, Pokemon gift ideas, Pokemon card shop Dublin, Pokemon card shop Ireland, Buy Pokemon cards Dublin, Buy Pokemon cards Ireland, Pokemon card seller, Pokemon cards near me, Pokemon card packs, Where to buy Pokemon cards Ireland, Best price Pokemon cards, Pokemon card holder, Pokemon cards for sale, Pokemon pin">
     {% endblock %}
 
     {% block extra_meta %}
@@ -180,7 +180,7 @@
                         <li>
                             <a href="" class="nav-link fs-6 mb-1">About Us</a>
                             <a href="{% url 'contact_us'%}" class="nav-link fs-6 mb-1">Contact Us</a>
-                            <a href="" class="nav-link fs-6">Privacy Policy</a>
+                            <a href="{% url 'privacy_policy' %}" class="nav-link fs-6">Privacy Policy</a>
                         </li>
                     </ul>
 
