Add about us page #74

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -438,6 +438,13 @@ header {
     border-radius: 0;
 }
 
+/************************** ABOUT US ***********************/
+
+/* map  */
+.g-map iframe {
+    width: 100%;
+}
+
 /*********************** MEDIA QUERIES ********************/
 
 /* 1400px xl */
