--- a/templates/base.html
+++ b/templates/base.html
@@ -178,7 +178,7 @@
                     <h5 class="text-center text-decoration-underline"><strong>Information</strong></h5>
                     <ul class="list-unstyled ms-2 text-center">
                         <li>
-                            <a href="" class="nav-link fs-6 mb-1">About Us</a>
+                            <a href="{% url 'about_us' %}" class="nav-link fs-6 mb-1">About Us</a>
                             <a href="{% url 'contact_us'%}" class="nav-link fs-6 mb-1">Contact Us</a>
                             <a href="{% url 'privacy_policy' %}" class="nav-link fs-6">Privacy Policy</a>
                         </li>
