--- a/templates/base.html
+++ b/templates/base.html
@@ -190,7 +190,7 @@
                     <ul class="list-unstyled list-inline mt-3">
                         <li class="list-inline-item">
                             <a class="btn btn-outline-light fb-icon"
-                                href="https://www.facebook.com/" target="_blank" rel="noopener nofollow"
+                                href="https://www.facebook.com/profile.php?id=61558864499890" target="_blank" rel="noopener nofollow"
                                 aria-label="Check out our Facebook page (opens in a new tab)"><i
                                     class="fab fa-facebook-f text-white"></i></a>
                         </li>
