--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Carter+One&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
 
+    <!-- Mailchimp -->
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
 
     {% endblock %}
 
@@ -220,7 +222,37 @@
                 </div>
                 <div class="col-12 col-sm-12 col-lg-4 mt-2">
                     <h5 class="text-center text-decoration-underline"><strong>Newsletter</strong></h5>
-
+                    <div id="mc_embed_shell">
+                        <div id="mc_embed_signup">
+                            <form
+                                action="https://herokuapp.us18.list-manage.com/subscribe/post?u=e162ff834ad07ab095bb85581&amp;id=f908fecc84&amp;f_id=006bc2e1f0"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                                target="_blank">
+                                <div id="mc_embed_signup_scroll text-center">
+                                    <p class="text-center mt-0">Keep up to date with all our latest product releases and deals!</p>
+                                    <div class="mc-field-group w-75 mx-auto">
+                                        <input type="email" name="EMAIL" class="required email"
+                                            id="mce-EMAIL" required="" value="" placeholder="Enter Email Address">
+                                    </div>
+                                    <div id="mce-responses" class="clear foot d-flex justify-content-center">
+                                        <div class="response text-white mx-0 mt-0 mb-2 px-0 py-0 text-center w-100" id="mce-error-response" style="display: none;"></div>
+                                        <div class="response text-white mx-0 mt-0 mb-2 px-0 py-0 text-center w-100" id="mce-success-response" style="display: none;"></div>
+                                    </div>
+                                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                        /* real people should not fill this in and expect good things - do not remove this or risk form bot
+                                        signups */
+                                        <input type="text" name="b_e162ff834ad07ab095bb85581_f908fecc84" tabindex="-1" value="">
+                                    </div>
+                                    <div class="optionalParent">
+                                        <div class="clear foot d-flex justify-content-center w-100">
+                                            <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-custom-yellow mx-0 my-0"
+                                                value="Subscribe">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row"><p class=" mb-0 p-1 text-center">©PokémonTcgIreland 2024</p></div>
@@ -254,6 +286,30 @@
         $(document).ready(function () {
             $('.toast').toast('show');
         });
+    </script>
+
+    <!-- Mailchimp -->
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
+    </script>
+    <script
+        type="text/javascript">
+        (function ($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0] = 'EMAIL';
+            ftypes[0] = 'email';
+            fnames[1] = 'FNAME';
+            ftypes[1] = 'text';
+            fnames[2] = 'LNAME';
+            ftypes[2] = 'text';
+            fnames[3] = 'ADDRESS';
+            ftypes[3] = 'address';
+            fnames[4] = 'PHONE';
+            ftypes[4] = 'phone';
+            fnames[5] = 'BIRTHDAY';
+            ftypes[5] = 'birthday';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);
     </script>
     {% endblock %}
 
