--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -41,7 +41,7 @@
                         {% if user.is_authenticated %}
                         <label class="form-check-label" for="id-save-info">Save this information to my
                             profile</label>
-                        <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info" checked>
+                        <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info">
                         {% else %}
                         <label class="form-check-label" for="id-save-info">
                             <a class="text-blue" href="{% url 'account_signup' %}">Create an account</a> or
