Ensure html fills full screen

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,6 +57,22 @@
 }
 
 /************************** GLOBAL ************************/
+html {
+    min-height: 100vh;
+    margin: 0;
+}
+
+body {
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    /* Take up all available space in parent element */
+    flex: 1;
+}
 
 /* Headings */
 h1,
