--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -45,7 +45,14 @@
                 <p class="mt-3 fs-4"><strong>{{ product.name }}</strong></p>
                 <div class="row">
                     <div class="col-6">
-                        <p class="text-blue fs-5"><strong>€{{ product.price}}</strong></p>
+                        <p class="text-blue fs-5">
+                            <strong>
+                                {% if product.pre_sale_price %}
+                                    <del class="text-red fs-6">{{product.pre_sale_price}}</del>
+                                {% endif %}
+                                €{{ product.price }}
+                            </strong>
+                        </p>
                     </div>
                     <div class="col-6 text-end">
                         {% if request.user.is_authenticated %}
