--- a/basket/templates/basket.html
+++ b/basket/templates/basket.html
@@ -40,7 +40,13 @@
                     </a>
                 </div>
                 <!-- product img -->
-                <div class="col-12 col-sm-4 mb-4">
+                <div class="col-12 col-sm-4 mb-4 position-relative">
+                    <!-- Sale badge -->
+                    {% if item.product.on_sale %}
+                    <div class="badge bg-red position-absolute fs-6" style="top: 1rem; right: 1rem">
+                        On Sale
+                    </div>
+                    {% endif %}
                     <a href="{% url 'product_detail' item.product.id %}">
                         {% if item.product.image %}
                         <img class="img-fluid rounded-4" src="{{ item.product.image.url }}" alt="{{ product.name }}">
@@ -86,7 +92,7 @@
                         </div>
                     </form>
                     <p class="mb-0 me-2 mb-1 price-basket">
-                        {% if item.product.pre_sale_price %}
+                        {% if item.product.on_sale %}
                             <del class="text-red fs-6">{{item.product.pre_sale_price}}</del>
                         {% endif %}
                         €{{ item.product.price}}
