--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -102,8 +102,14 @@
                     <div class="collapse" id="basket-summary">
                         <!-- Create a summary for each product -->
                         {% for item in basket_items %}
-                        <div class="row mt-1">
-                            <div class="col-12 col-sm-2 mb-1">
+                        <div class="row mt-3">
+                            <div class="col-12 col-sm-2 mb-1 position-relative">
+                                <!-- Sale badge -->
+                                {% if item.product.on_sale %}
+                                <div class="badge bg-red position-absolute small" style="top: -0.5rem; right: -0.5rem">
+                                    On Sale
+                                </div>
+                                {% endif %}
                                 <a href="{% url 'product_detail' item.product.id %}">
                                     {% if item.product.image %}
                                     <img class="img-fluid rounded-4" src="{{ item.product.image.url }}"
