--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -102,7 +102,7 @@
                     <div class="collapse" id="basket-summary">
                         <!-- Create a summary for each product -->
                         {% for item in basket_items %}
-                        <div class="row mt-3">
+                        <div class="row mb-3">
                             <div class="col-12 col-sm-2 mb-1 position-relative">
                                 <!-- Sale badge -->
                                 {% if item.product.on_sale %}
