--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -141,7 +141,7 @@
                     </a>
                 </p>
                 {% endif %}
-                <!-- Quantity -->
+                <!-- Quantity & add to basket-->
                 <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
