--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -75,15 +75,15 @@
   </div>
 {% endblock %}
 
-<!-- From boutique_ado walkthrough -->
 {% block postloadjs %}
     {{ block.super }}
+    <!-- From boutique_ado walkthrough -->
     <script type="text/javascript">
 		$('.btt-link').click(function(e) {
 			window.scrollTo(0,0)
 		})
 	</script>
-    
+    <!-- From boutique_ado walkthrough -->
     <script type="text/javascript">
         $('#sort-selector').change(function() {
             var selector = $(this);
@@ -106,4 +106,6 @@
             }
         })
     </script>
+    <!-- Disable all buttons when one is used -->
+    <script src="{% static 'products/js/product_card_btns.js' %}"></script>  
 {% endblock %}
