--- a/templates/includes/product_card.html
+++ b/templates/includes/product_card.html
@@ -82,11 +82,11 @@
                         {% endif %}
 
                         <!-- Add to basket button -->
-                        <form class="form" action="{% url 'add_to_basket' product.id %}" method="POST">
+                        <form class="form add-product-form" action="{% url 'add_to_basket' product.id %}" method="POST">
                             {% csrf_token %}
                             <div class="form-row">
                                 <div class="col-12 d-flex justify-content-center">
-                                    <input type="submit" class="btn btn-custom-yellow w-75 my-3 shadow" value="Add to basket">
+                                    <input type="submit" class="btn btn-custom-yellow w-75 my-3 shadow add-btn" value="Add to basket">
                                 </div>
                                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                 <input class="form-control" type="hidden" name="quantity" value="1">
